--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "typeRoots": ["./src/@types", "./node_modules/@types"],
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
+    "downlevelIteration": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
